--- a/public/admin.html
+++ b/public/admin.html
@@ -13,15 +13,16 @@
 
 <script>
   // 🔥 CONFIG SIAP PAKAI
-  const firebaseConfig = {
-    apiKey: "AIzaSyDiI9FCOT3mPPD9GF0U3PevtcSBPkzsH3Y",
-    authDomain: "chat-web-wa.firebaseapp.com",
-    projectId: "chat-web-wa",
-    storageBucket: "chat-web-wa.firebasestorage.app",
-    messagingSenderId: "429353619549",
-    appId: "1:429353619549:web:4584afab307b78072c7db4",
-    measurementId: "G-VKV3T9HZBG"
-  };
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDiI9FCOT3mPPD9GF0U3PevtcSBPkzsH3Y",
+  authDomain: "chat-web-wa.firebaseapp.com",
+  projectId: "chat-web-wa",
+  storageBucket: "chat-web-wa.firebasestorage.app",
+  messagingSenderId: "429353619549",
+  appId: "1:429353619549:web:cdd19e70e4eb07592c7db4",
+  measurementId: "G-XJTGPZZ3VQ"
+};
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 
