--- a/public/admin.html
+++ b/public/admin.html
@@ -6,51 +6,12 @@
 <title>Admin Dashboard</title>
 <link rel="manifest" href="manifest.webmanifest">
 <link rel="stylesheet" href="css/style.css">
-
-<!-- Firebase SDK (compat mode, langsung siap pakai) -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-
-<script>
-  // 🔥 CONFIG SIAP PAKAI
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyDiI9FCOT3mPPD9GF0U3PevtcSBPkzsH3Y",
-  authDomain: "chat-web-wa.firebaseapp.com",
-  projectId: "chat-web-wa",
-  storageBucket: "chat-web-wa.firebasestorage.app",
-  messagingSenderId: "429353619549",
-  appId: "1:429353619549:web:cdd19e70e4eb07592c7db4",
-  measurementId: "G-XJTGPZZ3VQ"
-};
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-
-  function sendMessage() {
-    const input = document.getElementById("msg-input");
-    if(input.value.trim() === "") return;
-    db.collection("messages").add({
-      text: input.value,
-      sender: "admin",
-      timestamp: firebase.firestore.FieldValue.serverTimestamp()
-    });
-    input.value = "";
-  }
-
-  db.collection("messages").orderBy("timestamp").onSnapshot(snapshot => {
-    const chatBox = document.getElementById("chat-box");
-    chatBox.innerHTML = "";
-    snapshot.forEach(doc => {
-      const msg = doc.data();
-      chatBox.innerHTML += `<p><b>${msg.sender}:</b> ${msg.text}</p>`;
-    });
-  });
-</script>
+<script src="js/admin.js" defer></script>
 </head>
 <body>
-  <h1>Admin Chat Dashboard</h1>
-  <div id="chat-box" style="border:1px solid #ccc; height:300px; overflow-y:auto; padding:10px;"></div>
-  <input type="text" id="msg-input" placeholder="Ketik pesan..." style="padding:10px; width:70%;">
-  <button onclick="sendMessage()" style="padding:10px;">Kirim</button>
+<h1>Admin Chat Dashboard</h1>
+<div id="chat-box" style="border:1px solid #ccc; height:300px; overflow-y:auto; padding:10px;"></div>
+<input type="text" id="msg-input" placeholder="Ketik pesan..." style="padding:10px; width:70%;">
+<button onclick="sendMessage()">Kirim</button>
 </body>
 </html>
