--- a/public/admin.html
+++ b/public/admin.html
@@ -10,8 +10,18 @@
 </head>
 <body>
 <h1>Admin Chat Dashboard</h1>
-<div id="chat-box" style="border:1px solid #ccc; height:300px; overflow-y:auto; padding:10px;"></div>
-<input type="text" id="msg-input" placeholder="Ketik pesan..." style="padding:10px; width:70%;">
-<button onclick="sendMessage()">Kirim</button>
+
+<!-- Input PIN -->
+<label>Masukkan PIN:</label>
+<input type="password" id="admin-pin" placeholder="PIN Admin">
+<button onclick="checkPin()">Masuk</button>
+
+<!-- Chat container hidden sampai PIN benar -->
+<div id="chat-container" style="display:none;">
+  <div id="chat-box" style="border:1px solid #ccc; height:300px; overflow-y:auto; padding:10px;"></div>
+  <input type="text" id="msg-input" placeholder="Ketik pesan..." style="padding:10px; width:70%;">
+  <button onclick="sendMessage()">Kirim</button>
+</div>
+
 </body>
 </html>
