--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chat Web - Menu</title>
-  <style>
-    body{margin:0;font-family:system-ui;background:linear-gradient(135deg,#0b141a,#0f2a20);color:#e9edef;display:flex;justify-content:center;align-items:center;height:100vh;padding:16px}
-    .card{width:min(720px,100%);background:#111b21;border:1px solid rgba(255,255,255,.08);border-radius:18px;padding:16px;box-shadow:0 10px 40px rgba(0,0,0,.55)}
-    h1{margin:0 0 6px 0}
-    p{margin:0 0 14px 0;color:#8696a0}
-    a{display:inline-block;margin-right:10px;margin-top:10px;padding:12px 14px;border-radius:14px;text-decoration:none;font-weight:900}
-    .btn1{background:#25D366;color:#062012}
-    .btn2{background:rgba(255,255,255,.08);color:#e9edef;border:1px solid rgba(255,255,255,.10)}
-    code{background:rgba(0,0,0,.25);padding:2px 8px;border-radius:999px}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Chat Web WA</title>
+<link rel="manifest" href="manifest.webmanifest">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="card">
-    <h1>Chat Web 🟢</h1>
-    <p>Pilih halaman:</p>
-    <a class="btn1" href="./customer.html">Customer</a>
-    <a class="btn2" href="./admin.html">Admin</a>
-    <p style="margin-top:16px">Catatan: isi <code>firebaseConfig</code> di <b>customer.html</b> & <b>admin.html</b> dulu ya.</p>
-  </div>
+<h1>Selamat datang di Chat Web WA</h1>
+<p>Pilih akses:</p>
+<ul>
+  <li><a href="customer.html">Customer</a></li>
+  <li><a href="admin.html">Admin</a></li>
+</ul>
 </body>
 </html>
