--- a/customer.html
+++ b/customer.html
@@ -10,8 +10,17 @@
 </head>
 <body>
 <h1>Chat Customer</h1>
-<div id="chat-box" style="border:1px solid #ccc; height:300px; overflow-y:auto; padding:10px;"></div>
-<input type="text" id="msg-input" placeholder="Ketik pesan..." style="padding:10px; width:70%;">
+
+<label>Nama:</label>
+<input type="text" id="customer-name" placeholder="Masukkan nama" style="padding:10px; width:70%;"><br>
+
+<label>No. Telepon:</label>
+<input type="text" id="customer-phone" placeholder="Masukkan nomor telepon" style="padding:10px; width:70%;"><br>
+
+<div id="chat-box" style="border:1px solid #ccc; height:300px; overflow-y:auto; padding:10px; margin-top:10px;"></div>
+
+<input type="text" id="msg-input" placeholder="Ketik pesan..." style="padding:10px; width:70%; margin-top:10px;">
 <button onclick="sendMessage()">Kirim</button>
+
 </body>
 </html>
