--- a/admin.html
+++ b/admin.html
@@ -16,9 +16,9 @@
 <button onclick="checkPin()">Masuk</button>
 
 <div id="chat-container" style="display:none; margin-top:20px;">
-  <h2>Pesan Customer</h2>
+  <h2>Pesan Customer & Admin</h2>
   <div id="chat-box" style="border:1px solid #ccc; height:300px; overflow-y:auto; padding:10px;"></div>
-  <input type="text" id="msg-input" placeholder="Ketik balasan..." style="padding:10px; width:70%; margin-top:10px;">
+  <input type="text" id="msg-input" placeholder="Ketik balasan Admin..." style="padding:10px; width:70%; margin-top:10px;">
   <button onclick="sendMessage()">Kirim</button>
 </div>
 
