--- a/admin.html
+++ b/admin.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Dashboard</title>
-<link rel="manifest" href="manifest.webmanifest">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/admin.js" defer></script>
+  <meta charset="UTF-8">
+  <title>Admin Dashboard</title>
 </head>
 <body>
-<h1>Admin Chat Dashboard</h1>
+  <h2>Admin Dashboard</h2>
+  <div id="list"></div>
 
-<label>Masukkan PIN:</label>
-<input type="password" id="admin-pin" placeholder="PIN Admin">
-<button onclick="checkPin()">Masuk</button>
-
-<div id="chat-container" style="display:none; margin-top:20px;">
-  <h2>Pesan Customer & Admin</h2>
-  <div id="chat-box" style="border:1px solid #ccc; height:300px; overflow-y:auto; padding:10px;"></div>
-  <input type="text" id="msg-input" placeholder="Ketik balasan Admin..." style="padding:10px; width:70%; margin-top:10px;">
-  <button onclick="sendMessage()">Kirim</button>
-</div>
-
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
